<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.coursera.symptomsmanagement.ui.MainActivity" >

    <Button
        android:id="@+id/button_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:text="@string/button_action_patient" />

    <EditText
        android:id="@+id/editText_patient_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_patient"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button_patient"
        android:layout_alignEnd="@+id/button_patient"
        android:layout_below="@+id/editText_patient_number"
        android:layout_marginTop="54dp"
        android:text="@string/button_action_doctor" />

    <EditText
        android:id="@+id/editText_doctor_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_doctor"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/button_get_data_from_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/button_get_data_from_server" />

    <ProgressBar
        android:id="@+id/progress_bar_main"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button_doctor"
        android:visibility="gone"
        android:layout_alignTop="@+id/editText_patient_number"
        android:layout_marginTop="21dp"
        android:gravity="center_vertical|center_horizontal" />

</RelativeLayout>

